--- a/www/index.html
+++ b/www/index.html
@@ -725,7 +725,7 @@
                 <div class="input-group" style="width: 100%">
                     <span id="sendsubheading" class="text-muted"></span>
                     <div class="pull-right">
-                        <button type="button" id="btnsendmoneystd" class="btn btn-bg btn-primary disabled">
+                        <button type="button" id="btnsendmoneystd" class="btn btn-bg btn-primary">
                             Send</button>
                     </div>
                 </div>
@@ -849,6 +849,79 @@
                 </div>
             </div>
         </section>
+        <section id="pinpreconfirm" class="panel panel-default iosheader" style="display: none">
+            <!-- style="display:none">-->
+            <header class="panel-heading bg-light no-border">
+                <div class="closetap pull-right" id="btnClosePreConf">
+                    <i class="i fa-2x i-cross2" style="margin-top: 6px;"></i>
+                </div>
+                <div class="clearfix">
+                    <div class="clear">
+                        <div class="h3 m-t-xs m-b-xs">
+                            Confirmation
+                        </div>
+                        <small class="text-muted">Check the details below</small>
+                    </div>
+                </div>
+            </header>
+            <div class="m-t-sm">
+                <div id="pinconfdets" class="m-l-sm m-r-sm m-b-sm">
+                    <div class="m-t-xs m-l-xs m-r-xs nav nav-stacked">
+                        <div style="display: none" id="sendstdlbli" class="bg-light wrapper-sm">
+                            <div>
+                                <span id="sendstdlabel"></span>
+                            </div>
+                        </div>
+                        <div class="wrapper-sm m-t-xs b-b" style="height: 60px; padding-right: 0px;">
+                            <div>
+                                To
+                            </div>
+                            <div>
+                                <span class="h5 text-primary" id="sendstds2add"></span>
+                            </div>
+                        </div>
+                        <div class="wrapper-sm b-b" style="height: 60px; padding-right: 0px;">
+                            <div class="pull-left" style="padding-top: 5px; padding-bottom: 5px; padding-right: 10px;">
+                                <div>
+                                    Amount
+                                </div>
+                                <span class="h4 text-primary" id="sendstds2amt"></span>
+                            </div>
+                            <div id="tapeditamt" class="pull-right" style="padding-top: 5px; padding-bottom: 5px;
+                                padding-right: 20px; padding-left: 15px; display: none">
+                                <i class="i i-pencil"></i>Edit
+                            </div>
+                        </div>
+                    </div>
+                    <div class="m-t-xs m-l-xs m-r-xs nav nav-stacked">
+                        <div class="wrapper-sm b-b" style="height: 60px; padding-right: 0px;">
+                            <div class="pull-left" style="padding-top: 5px; padding-bottom: 5px; padding-right: 10px;">
+                                <div>
+                                    Fee
+                                </div>
+                                <span class="h5 text-primary" id="feestds2amt"></span>
+                                <input type="hidden" id="hdfee" />
+                            </div>
+                            <div id="tapeditfee" class="pull-right" style="padding-top: 5px; padding-bottom: 5px;
+                                padding-right: 20px; padding-left: 15px;">
+                                <div class="btn-group-horizontal m-b-sm">
+                                    <div id="feeminus" class="btn btn-default">
+                                        <i class="fa fa-minus text"></i>
+                                    </div>
+                                    <div id="feeplus" class="btn btn-default">
+                                        <i class="fa fa-plus text"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="m-t-sm m-l-xs m-r-xs nav nav-stacked text-center">
+                        <button type="button" id="btnpreconfirm" class="btn btn-s-md btn-primary">
+                            Send</button>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section id="pinconfirm" class="panel panel-default iosheader" style="display: none">
             <!-- style="display:none">-->
             <header class="panel-heading bg-light no-border">
@@ -865,29 +938,6 @@
                 </div>
             </header>
             <div class="m-t-sm">
-                <div id="pinconfdets" class="m-l-sm m-r-sm m-b-sm">
-                    <div class="m-t-xs m-l-xs m-r-xs nav nav-stacked">
-                        <div style="display: none" id="sendstdlbli" class="bg-light wrapper-sm">
-                            <div>
-                                <span id="sendstdlabel"></span>
-                            </div>
-                        </div>
-                        <div class="bg-light wrapper-sm m-t-xs">
-                            <div>
-                                <span id="sendstds2add"></span>
-                            </div>
-                        </div>
-                        <div class="bg-light wrapper-sm m-t-xs" style="height: 40px; padding-right: 0px;">
-                            <div class="pull-left" style="padding-top: 5px; padding-bottom: 5px; padding-right: 10px;">
-                                <span class="h4 text-primary" id="sendstds2amt"></span>
-                            </div>
-                            <div id="tapeditamt" class="pull-right" style="padding-top: 5px; padding-bottom: 5px;
-                                padding-right: 20px; padding-left: 15px;">
-                                <i class="i i-pencil"></i>Edit
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 <div id="stdconfpin" class="m-t-sm">
                     <div class="col-xs-4 pinsquare" style="margin-bottom: 0px;">
                         <div>
@@ -1109,10 +1159,10 @@
         <div id="createWalletStart" class="iosheader" style="display: none">
             <div class="col-sm-12 m-t-xs text-center">
                 <div style="background-color: White; margin-top: 0px;">
-                    <img src="images/ninki.png" width="200" height="150">
+                    <img src="images/ninki.png" width="150" height="112.5">
                 </div>
                 <form id="frmcreate" data-validate="parsley" class="form-horizontal">
-                <div class="list-group">
+                <div id="newzone" class="list-group">
                     <div class="list-group-item" style="display: none">
                         <input id="guid" class="form-control" autocomplete="off" data-parsley-required="true"
                             name="guid" readonly="readonly" />
@@ -1140,6 +1190,10 @@
                     <div class="btn btn-default btn-lg h4" id="qrpair">
                         <span class="text font-thin h4"><i class="fa fa-qrcode text-success"></i>&nbsp;Pair
                             this Device</span>
+                    </div>
+                    <div id="restoresection" class="text-center m-t-md">
+                        <div class="h5 m-b font-thin">
+                            <a id="restoreacc" class="text-primary">Reset/Lost Phone?</a></div>
                     </div>
                 </div>
                 <input id="pairdeviceblob" value="" type="hidden" />
@@ -1632,7 +1686,7 @@
                             <input type="hidden" id="txtCode" class="form-control nopost" />
                             <div id="validateformmess">
                             </div>
-                            <button id="btnVerify" type="button" class="btn btn-sm btn-default" style="display:none">
+                            <button id="btnVerify" type="button" class="btn btn-sm btn-default" style="display: none">
                                 Validate</button>
                         </div>
                     </div>
@@ -1655,16 +1709,13 @@
                 </header>
                 <div class="col-lg-4">
                     <div class="row">
-                        <div class="col-xs-4">
-                            <button id="btnpayinvoice" class="btn btn-block
-                        btn-info">
+                        <div class="col-xs-5">
+                            <button id="btnpayinvoice" class="btn btn-block btn-info" data-loading-text="Calculating...">
                                 Pay</button>
                         </div>
-                        <div class="col-xs-4">
+                        <div class="col-xs-5">
                             <button id="btnrejectinvoice" class="btn btn-block btn-info">
                                 Reject</button>
-                        </div>
-                        <div class="col-xs-4">
                         </div>
                     </div>
                 </div>
@@ -2013,7 +2064,7 @@
                     <i class="fa fa-refresh text"></i>
                 </button>
             </div>
-            <div class="panel-body" style="padding-top: 0px;">
+            <div class="panel-body text-center" style="padding-top: 0px;">
                 <div id="newaddrspinner">
                 </div>
                 <div id="requestaddress" style="display: none" class="clearfix text-center m-t">
@@ -2023,6 +2074,9 @@
                         <div style="word-break: break-all;" id="requestaddresstxt">
                         </div>
                     </div>
+                </div>
+                <div id="receivealert" class="m-t-lg btn btn-sm btn-info" style="display: none">
+                    
                 </div>
             </div>
         </section>
@@ -2152,6 +2206,13 @@
                             <td>
                                 <span class="text-primary">Sent/Received</span>
                                 <div id="infotransent">
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <span class="text-primary">Fee</span>
+                                <div id="infotransfee">
                                 </div>
                             </td>
                         </tr>
@@ -2440,9 +2501,30 @@
                     </label>
                 </div>
             </div>
-            <div class="col-md-6 b-t b-b">
+            <div class="col-md-6 b-t">
                 <div class="sccy h4 block padder-v" style="padding-top: 15px; padding-bottom: 15px;">
                     CNY
+                    <label class="active pull-right m-t-xxs">
+                    </label>
+                </div>
+            </div>
+            <div class="col-md-6 b-t">
+                <div class="sccy h4 block padder-v" style="padding-top: 15px; padding-bottom: 15px;">
+                    GBP
+                    <label class="active pull-right m-t-xxs">
+                    </label>
+                </div>
+            </div>
+            <div class="col-md-6 b-t">
+                <div class="sccy h4 block padder-v" style="padding-top: 15px; padding-bottom: 15px;">
+                    AUD
+                    <label class="active pull-right m-t-xxs">
+                    </label>
+                </div>
+            </div>
+            <div class="col-md-6 b-t b-b">
+                <div class="sccy h4 block padder-v" style="padding-top: 15px; padding-bottom: 15px;">
+                    NZD
                     <label class="active pull-right m-t-xxs">
                     </label>
                 </div>
@@ -2651,6 +2733,47 @@
                     If you have any questions about these Terms, please contact us.</p>
             </section>
         </section>
+        <div id="secrestore" class="panel panel-default iosheader mobmod" style="display: none">
+            <header class="no-border">
+                <div class="clearfix">
+                    <div class="clear">
+                        <div class="h3 font-thin m-t-xs m-b-xs text-center">
+                            Restore Account
+                        </div>
+                    </div>
+                </div>
+            </header>
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="text-center">
+                        <div class="form-group padder">
+                            <div class="m-sm">
+                                Enter <span class="text-warning">Online Key</span> Phrase</div>
+                            <textarea id="txtOnlineKeyPhrase" class="form-control parsley-validated" rows="4"
+                                data-minwords="6" data-required="true" placeholder="" autocorrect="off" autocapitalize="off"></textarea>
+                        </div>
+                    </div>
+                    <div class="text-center">
+                        <div class="form-group padder">
+                            <div class="m-sm">
+                                Enter <span class="text-info">Recovery Key</span> Phrase</div>
+                            <textarea id="txtOfflineKeyPhrase" class="form-control parsley-validated" rows="4"
+                                data-minwords="6" data-required="true" placeholder="" autocorrect="off" autocapitalize="off"></textarea>
+                        </div>
+                    </div>
+                    <div class="text-center">
+                        <div class="form-group padder">
+                            <button class="btn btn-primary btn-block" type="button" id="btnOnlineKey">
+                                Restore</button>
+                        </div>
+                        <div class="form-group padder">
+                            <button class="btn btn-default btn-block" type="button" id="btnOnlineKeyCancel">
+                                Cancel</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <div id="pairspinner">
     </div>
@@ -2662,13 +2785,13 @@
                 Timeline
             </div>
             <div class="btn-menu" id="btnmenunetwork" style="-webkit-touch-callout: none">
-                <i class="fa
-                  fa-lg fa-sitemap text-info"></i>
+                <i class="fa fa-lg fa-sitemap text-info"></i>
                 <br />
                 Contacts
             </div>
             <div class="btn-menu" id="btnmenusettings" style="-webkit-touch-callout: none">
-                <i class="fa fa-lg fa-gear text-info"></i>
+                <i class="fa
+    fa-lg fa-gear text-info"></i>
                 <br />
                 Settings
             </div>
@@ -2701,11 +2824,7 @@
     <script src="js/ninki-mobile-min.js?c=6"></script>
     <script src="cordova.js"></script>
     <script src="js/index.js"></script>
-    <script>
-        if (!(typeof window.app === 'undefined')) {
-            app.initialize();
-        }
-        Ninki.UI();
-    </script>
+    <script>        if (!(typeof window.app === 'undefined'))
+        { app.initialize(); } Ninki.UI(); </script>
 </body>
 </html>
